--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@electron-forge/maker-squirrel": "^6.0.1",
     "@electron-forge/maker-wix": "^6.0.1",
     "@electron-forge/maker-zip": "^6.0.1",
-    "electron": "^21.2.3"
+    "electron": "^21.2.3",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
